# Whytchat

./: .codacy.yml  .env.example  .gitignore  .sourcery.yaml  AGENTS.md  CHAOS_TEST_PLAN.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRESENTATION-ARCHITECTURE-WhytChat.md  PROJECT_STRUCTURE.md  README.md  TODO.md  Test_whytcard.code-workspace  WHYTCHAT_ARCHITECTURE.md  WhytChat.code-workspace  WhytChat_V1.code-workspace  codacy.patch  package-lock.json  package.json  patch.patch  playwright.config.js  rd.md  repo.md  test-release.txt  todo.md
.cargo/: config.toml
.github/: RELEASE_SETUP.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/Project_knowledge/: ARCHITECTURE.md  AUDIT_CRITIQUE.md  IA_INTERNALS.md
.github/instructions/: codacy.instructions.md  main.instructions.md  regels.instructions.md  vsagent.instructions.md
.github/knowledge/: 00_INDEX.md
.github/knowledge/scripts/: knowledge-gardener.js
.github/rules/: coding-standards.md
.github/workflows/: auto-fix.yml  ci.yml  complete-ci.yml  linux-build.yml  macos-build.yml  nightly.yml  release.yml  security.yml  test.yml  windows-build.yml
.husky/: pre-commit
.roo/rules-architect/: AGENTS.md
.roo/rules-ask/: AGENTS.md
.roo/rules-code/: AGENTS.md
.roo/rules-debug/: AGENTS.md
Backend/models/: pack-sources.json  presets.json
Backend/src-tauri/: Cargo.toml  README.md  tauri.conf.json
Backend/src-tauri/.cargo/: config.toml
Backend/src-tauri/capabilities/: default.json
Backend/src-tauri/src/: db.rs  llama.rs  llama_install.rs  main.rs  process_manager.rs  rag.rs  search.rs  setup.rs
Doc/: ARCHITECTURE.md  BUSINESS_PLAN.md  COMPLETE_SYSTEM_DOCUMENTATION.md  FEATURES.md  IA_INTERNALS.md  METHODOLOGIE_DEV.md  PROCESSUS.md  RAG_SYSTEM.md  README.md  STANDARDS.md  USER_MANUAL.md
Frontend/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.cjs  vite.config.js
Frontend/.husky/: pre-commit
Frontend/src/: App.jsx  i18n.js  index.css  main.jsx
Frontend/src/components/: GlobalErrorFallback.jsx
Frontend/src/hooks/: useChatConfig.js  useChatInput.js  useHotkeys.js  useKeyboardNavigation.js
Frontend/src/lib/: agentPresets.js  api.js  constants.js  store.js  templates.js
apps/core/: Cargo.toml  tauri.conf.json
apps/core/.cargo/: config.toml
apps/core/capabilities/: default.json
apps/core/migrations/: 20251123140220_initial_schema.sql  20251123143804_add_session_id_index_to_messages.sql  20251125210000_add_session_sorting.sql  20251126100000_global_library.sql  20251126130000_add_document_folders.sql  20251126140000_cleanup_empty_messages.sql
apps/core/src/: database.rs  diagnostics.rs  encryption.rs  error.rs  fs_manager.rs  main.rs  models.rs  preflight.rs  rate_limiter.rs  run_logger.rs  text_extract.rs
apps/core/src/actors/: llm.rs  messages.rs  mod.rs  rag.rs  supervisor.rs  traits.rs
apps/core/src/brain/: analyzer.rs  complexity.rs  context_packet.rs  intent.rs  keywords.rs  mod.rs  semantic_intent.rs
apps/core/src/tests/: actor_tests.rs  brain_tests.rs  chaos_test.rs  database_tests.rs  download_tests.rs  encryption_tests.rs  integration_tests.rs  mod.rs  supervisor_tests.rs  text_extract_tests.rs
apps/core/tools/cmake/doc/cmake/html/_static/: doctools.js  searchtools.js  sidebar.js  sphinx_highlight.js
apps/desktop-ui/: .prettierignore  eslint.config.js  index.html  package.json  playwright.config.js  prettier.config.js  tailwind.config.js  vite.config.js
docs/: ARCHITECT_REPORT.md  CHANGELOG.md  I18N_GUIDE.txt  PLAN_INTEGRATION_SQLITE.md  PROJECT_VISION.txt  PROPOSITION_AMELIORATIONS.md  REFACTORING_PLAN.md  ROADMAP.md  TECHNICAL_MANUAL.md  TECHNICAL_PLAN.md  USER_GUIDE.md  brain.txt
documentation/analysis/: DEPENDENCY_MAP.md  codebase-analysis.json
documentation/fr/: 00_INDEX.md  01_VUE_ENSEMBLE.md  02_ARCHITECTURE.md  03_BACKEND.md  03_BACKEND_RUST.md  04_BRAIN_MODULE.md  04_FRONTEND_REACT.md  05_FLUX_DONNEES.md  05_FRONTEND.md  06_COMMANDES_TAURI.md  06_SECURITE.md  07_FLUX_DONNEES.md  07_IRREGULARITES.md  08_CONFIGURATION.md  08_RECOMMANDATIONS.md  09_METRIQUES.md  09_TESTS.md  10_SECURITE.md  11_RAG_SYSTEM.md  12_DEPLOIEMENT.md  ANALYSIS_REPORT_2024.md
reports/: imports-variables-duplicates.json
scripts/: analyze-codebase.ps1  force_push_local_state.ps1
scripts/analysis/: analyze-duplicates.ps1  scan-imports.mjs  validate-structure.mjs
scripts/dev/: _fix-frontend-install.ps1  dev.ps1  install-i18n.ps1  quick-launch.ps1  start-frontend-only.ps1
scripts/prod/: start.ps1
tests/python_simulation/: requirements.txt  simulate_usage.py  simulation_log.txt
(+69 files in other folders)
