[package]
name = "whytchat-backend"
version = "0.5.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Core Tauri runtime
tauri = { version = "2", features = [] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime and HTTP
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "io-util"] }
futures = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
anyhow = "1"
thiserror = "1"

# Hashing
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }

# Archives
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# RAG Stack
fastembed = "4" # Embeddings locaux rapides (ONNX)
text-splitter = { version = "0.17", features = ["markdown"] } # Découpage intelligent
pdf-extract = "0.7" # Lecture PDF
sled = "0.34" # Embedded database for RAG storage
bincode = "1.3" # Binary serialization for efficient storage

# Web Search
scraper = "0.21" # HTML parsing pour DuckDuckGo
urlencoding = "2"