[package]
name = "whytchat-core"
version = "1.0.0"
description = "WhytChat V1 Backend Brain"
authors = ["Whytcard"]
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
log = "0.4"
thiserror = "1.0"
env_logger = "0.11"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
arrow = "52.2.0"
lancedb = { version = "0.10", default-features = false }
reqwest = { version = "0.12", features = ["json", "stream"] }
fastembed = "4"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

[dev-dependencies]
tempfile = "3.10"
