[package]
name = "whytchat-core"
version = "1.0.0"
description = "WhytChat V1 Backend Brain"
authors = ["Whytcard"]
edition = "2021"
rust-version = "1.80.0"

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
tauri-plugin-dialog = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "registry"] }
tracing-bunyan-formatter = "0.3"
anyhow = "1.0"
uuid = { version = "1.8", features = ["v4"] }
chrono = { version = "=0.4.38", features = ["serde"] }
arrow = "52.2.0"
lancedb = { version = "0.10", default-features = false }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
fastembed = "4"
async-trait = "0.1"
futures = "0.3"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
infer = "0.16"
url = "2.5"
which = "6.0"
validator = { version = "0.18", features = ["derive"] }
lru = "0.12.3"
dotenv = "0.15"
regex = "1"

# PDF and DOCX text extraction
pdf-extract = "0.7"
docx-rs = "0.4"

aes-gcm = "0.10.3"
rand = "0.8"
base64 = "0.22"
zip = "4.2.0"
[dev-dependencies]
tempfile = "3.10"
wiremock = "0.6"
temp-env = "0.3"
mockito = "1.7.0"
